--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://5eecc5ab-a822-4889-a12e-0542856ba7ad.preview.emergentagent.com
 WDS_SOCKET_PORT=443
